# my-qpid-interop-test

./: CMakeLists.txt
docs/: Shim_HOWTO.txt
shims/qpid-proton-go/: CMakeLists.txt
shims/qpid-proton-go/amqp_types_test/: Receiver.go  Sender.go  encode_decode_test.go  shim.go
shims/qpid-proton-go/src/qpid.apache.org/amqp_types_test/: shim.go  shim_test.go
src/python/qpid_interop_test/: amqp_types_test.py  shims.py
